# clap_cli

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
ci/: build-and-publish-m2
examples/js-ping/: index.js  photoniq.toml
examples/rust-ping/: Cargo.toml  photoniq.toml
examples/rust-ping/src/: main.rs
photoniq-faas-sdk/: test.md
src/: main.rs
tests/: cli.rs
