[package]
name = "clap_cli"
version = "0.26.0"
edition = "2021"
authors = ["Dino Lozina <dino.lozina@live.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to search files and test publish workflow"
readme = "README.md"
homepage = "https://github.com/dlozina/clap_cli"
repository = "https://github.com/dlozina/clap_cli"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0.83"
ansi_term = "0.12"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
assert_fs = "1.1.1"

# This is the main way to strip binaries in the deb package created by
# 'cargo deb'. For other release binaries, we (currently) call 'strip'
# explicitly in the release process.
[profile.deb]
inherits = "release"
debug = false